--- a/requirements_base.txt
+++ b/requirements_base.txt
@@ -1,3 +1,8 @@
+--extra-index-url https://download.pytorch.org/whl/cu118
+torch==2.3.0
+torchvision==0.18.0
+torchaudio==2.3.0
+
 numpy==1.26.4
 pyyaml==6.0.1
 opencv-python==4.10.0.84
@@ -6,6 +11,7 @@ imageio==2.34.2
 lmdb==1.4.1
 tqdm==4.66.4
 rich==13.7.1
+ffmpeg==1.4
 ffmpeg-python==0.2.0
 onnx==1.16.1
 scikit-image==0.24.0
