--- a/requirements_base.txt
+++ b/requirements_base.txt
@@ -1,7 +1,7 @@
---extra-index-url https://download.pytorch.org/whl/cu118
-torch==2.3.0
-torchvision==0.18.0
-torchaudio==2.3.0
+--extra-index-url https://download.pytorch.org/whl/cu124
+torch
+torchvision
+torchaudio
 
 numpy==1.26.4
 pyyaml==6.0.1
@@ -13,7 +13,7 @@ tqdm==4.66.4
 rich==13.7.1
 ffmpeg==1.4
 ffmpeg-python==0.2.0
-onnx==1.16.1
+onnx==1.16.2
 scikit-image==0.24.0
 albumentations==1.4.10
 matplotlib==3.9.0
